<resources>
    <string name="app_name">Navigation Drawer App</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="sync">Sync</string>
    <string name="login">Login</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="communicate">Communicate</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_application">Navigation Drawer Application</string>
    <string name="username">Username</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>